// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change option 1`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 2`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">和平区</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">河东区</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 3`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">和平区</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">河东区</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-num prop 1`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-top、columns-bottom slot 1`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->Top<div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>Bottom
  <!---->
</div>
`;

exports[`reset method 1`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 66px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">蓟县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`reset method 2`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`title slot 1`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button>Custom Title<button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 1`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 2`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 3`] = `
<div class="ghb-picker ghb-area">
  <div class="ghb-picker__toolbar"><button type="button" class="ghb-picker__cancel">取消</button><button type="button" class="ghb-picker__confirm">确认</button></div>
  <!---->
  <div class="ghb-picker__columns" style="height: 264px;">
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">天津市</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">北京市</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">县</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker-column">
      <ul class="ghb-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="ghb-picker-column__item ghb-picker-column__item--selected" style="height: 44px;">
          <div class="ghb-ellipsis">东城区</div>
        </li>
        <li role="button" tabindex="0" class="ghb-picker-column__item" style="height: 44px;">
          <div class="ghb-ellipsis">西城区</div>
        </li>
      </ul>
    </div>
    <div class="ghb-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="ghb-hairline-unset--top-bottom ghb-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;
